--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div id='container'>
+      <div id='game'></div>
+    </div>
   </body>
 </html>
